# ADBench

./: .gitmodules  cpu.Dockerfile  cuda.Dockerfile
ADBench/: run-all.ps1  run_freetensor_cores.sh  run_pytorch_cores.sh  run_pytorch_opt_cores.sh  run_tapenade_cores.sh
omp_benchmark/: run-all.sh
omp_benchmark/ReverseMode/adbench/: ba.h  gmm.h  hand.h
omp_benchmark/ReverseMode/ba/: ba.cpp  ba.sh  baback.h  results.json  results_objective.json  results_omp.json  results_omp_srun.json  results_serial_srun.json
omp_benchmark/ReverseMode/ba/result/: results_objective_omp.json  results_serial.json
omp_benchmark/ReverseMode/gmm/: gmm.cpp  gmm.h  gmm.sh  results_omp_srun.json
omp_benchmark/ReverseMode/hand/: hand.cpp  hand.sh  results_omp_srun_simple.json
omp_benchmark/tapenadeOMP/ba/: CMakeLists.txt  Makefile  TapenadeBA.cpp  TapenadeBA.h  ba.sh  ba_module_diff.mod  ba_objective.sh  backf90ba.f90  compare.py  compare.sh  f_tapenade_b.f03  f_tapenade_b.f90  f_tapenade_omp_b.f03  f_tapenade_omp_b.f90  f_tapenade_omp_b.msg  fun.f90  main_ba.cpp
omp_benchmark/tapenadeOMP/ba/ba/: ba.c  ba.h  ba_b.c  ba_b.h
omp_benchmark/tapenadeOMP/gmm/: CMakeLists.txt  TapenadeGMM.cpp  TapenadeGMM.h  compare.py  gmm.sh
omp_benchmark/tapenadeOMP/gmm/gmm/: f_gmm_tapenade_omp_b.msg  f_gmm_tapenade_omp_b.msg~  f_tapenade_omp_b.f90  f_tapenade_omp_b.f90_back  gmm.f90  gmm.h  gmm_b.c  gmm_b.h
omp_benchmark/tapenadeOMP/runner/: Benchmark.h  ModuleLoader.cpp  OutputSave.cpp
src/cpp/modules/: CMakeLists.txt
src/cpp/modules/enzyme/: CMakeLists.txt  EnzymeBA.cpp  EnzymeBA.h  EnzymeGMM.cpp  EnzymeGMM.h
src/cpp/modules/enzyme/adbench/: ba.h  gmm.h
src/cpp/modules/enzyme/ba/: ba.cpp  debug.sh  run_different_core.sh
src/cpp/modules/enzyme/ba/result/: results_omp.json
src/cpp/modules/enzyme/gmm/: compare.py  gmm.cpp  gmm.sh
src/cpp/modules/enzyme/mshared/: log-diff.out
src/cpp/modules/enzymeOMP/: CMakeLists.txt
src/cpp/modules/tapenade/: CMakeLists.txt
src/cpp/modules/tapenadeFortranOMP/: CMakeLists_EXAMPLE.txt  TapenadeGMM.cpp
src/cpp/modules/tapenadeFortranOMP/gmm/: f_tapenade_omp_b.f90  f_tapenade_serial_b.f90  gmm.f90  gmm.h  gmm_b.h
src/cpp/modules/tapenadeOMP/: CMakeLists.txt  TapenadeBA.cpp  TapenadeBA.h  TapenadeGMM.cpp
src/cpp/modules/tapenadeOMP/ba/: CMakeLists.txt  ba.c  ba.h  ba_b.c  ba_b.h  ba_b.patch  ba_b_std.c
src/cpp/modules/tapenadeOMP/gmm/: f_tapenade_b_omp.f90  f_tapenade_omp.f90  gmm.h  gmm_b.c  gmm_b.h
src/cpp/runner/: Benchmark.h  OutputSave.cpp  main.cpp
src/python/modules/FreeTensor/: FreeTensorBA.py  FreeTensorGMM.py  FreeTensorHand.py  FreeTensorLSTM.py  gmm_objective.py  hand_objective.py  lstm_objective.py
src/python/modules/FreeTensorGPU/: FreeTensorGPUBA.py  FreeTensorGPUGMM.py  FreeTensorGPUHand.py  FreeTensorGPULSTM.py
src/python/modules/PyTorch/: CMakeLists.txt  PyTorchBA.py  PyTorchGMM.py  PyTorchHand.py
src/python/modules/PyTorchGPU/: PyTorchGPUBA.py  PyTorchGPUGMM.py  PyTorchGPUHand.py
src/python/modules/PyTorchVmap/: PyTorchVmapBA.py  PyTorchVmapGMM.py  PyTorchVmapHand.py  gmm_objective.py
src/python/modules/PyTorchVmapGPU/: PyTorchVmapGPUBA.py  PyTorchVmapGPUGMM.py  PyTorchVmapGPUHand.py
src/python/modules/TorchScript/: CMakeLists.txt
src/python/runner/: Benchmark.py
